--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/CatSnakeDeluxe/Case-Canvas-Online-Paint#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "uuidv4": "^6.2.13",
     "ws": "^8.9.0"
   }
 }
